syntax = "proto3";

package v1;

option go_package = "./v1";

import "v1/meta.proto";
import "v1/quota.proto";
import "v1/iam.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service TenantService {
    rpc Create(TenantCreateRequest) returns(TenantResponse) {
        option (google.api.http) = {
            put: "/v1/tenant/{tenant.meta.id}"
            body: "*"
        };
    };
    rpc Update(TenantUpdateRequest) returns(TenantResponse) {
        option (google.api.http) = {
            post: "/v1/tenant/{tenant.meta.id}"
            body: "*"
        };
    };
    rpc Delete(TenantDeleteRequest) returns(TenantResponse) {
        option (google.api.http) = {
            delete: "/v1/tenant/{id}"
        };
    };
    rpc Get(TenantGetRequest) returns(TenantResponse) {
        option (google.api.http) = {
            get: "/v1/tenant/{id}"
        };
    };
    rpc GetHistory(TenantGetHistoryRequest) returns(TenantResponse) {
        option (google.api.http) = {
            post: "/v1/tenant/{id}/history"
        };
    };
    rpc Find(TenantFindRequest) returns(TenantListResponse) {
        option (google.api.http) = {
            post: "/v1/tenant"
            body: "*"
        };
    };
}

message Tenant {
    Meta meta = 1;
    string name = 2;
    string description = 3;
    QuotaSet default_quotas = 4;
    QuotaSet quotas = 5;
    IAMConfig iam_config = 6;
}

message TenantCreateRequest {
    Tenant tenant = 1;
}

message TenantUpdateRequest {
    Tenant tenant = 1;
}

message TenantDeleteRequest {
    string id = 1;
}

message TenantGetRequest {
    string id = 1;
}

message TenantGetHistoryRequest {
    string id = 1;
    google.protobuf.Timestamp at = 2;
}

message TenantFindRequest {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue name = 2;
}

message TenantResponse {
    Tenant tenant = 1;
}

message TenantListResponse {
    repeated Tenant tenants = 1;
}
